--- a/src/main/webapp/css/default.css
+++ b/src/main/webapp/css/default.css
@@ -20,7 +20,7 @@ padding: 35px 0px 35px 0px;
 body,input
 {
 font-size: 10pt;
-font-family: "georgia", "times new roman", serif;
+/*font-family: "georgia", "times new roman", serif;*/
 color: #333333;
 }
 
@@ -60,14 +60,14 @@ h3
 {
 font-size: 1.7em;
 padding-right: 34px;
-background-image: url('../images/db1.gif');
+background-image: url('../images/db11.gif');
 }
 
 h4
 {
 font-size: 1.2em;
 padding-right: 28px;
-background-image: url('../images/db2.gif');
+background-image: url('../images/db22.gif');
 }
 
 .contentarea
@@ -108,7 +108,7 @@ clear: both;
 position: relative;
 height: 1px;
 border-bottom: solid 1px #eaeaea;
-margin: 2.0em 0em 2.0em 0em;
+margin: 1.0em 0em 1.0em 0em;
 }
 
 .post .details
@@ -221,7 +221,7 @@ padding: 0em 2.0em 1.3em 2.0em;
 {
 font-weight: normal;
 color: #fff;
-font-size: 2.5em;
+font-size: 2.0em;
 }
 
 #headercontent h1 sup
